--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Shakespeare, William, 1564-1616 -- Criticism and interpretation'
 - !lcsh 'Poetry'
 - !lcc 'PN'
+- GITenberg
 tableOfContents: Poetry for poetry's sake -- The sublime -- Hegel's theory of tragedy
   -- Wordsworth -- Shelley's view of poetry -- The long poem in the age of Wordsworth
   -- The letters of Keats -- The rejection of Falstaff -- Shakespeare's 'Antony and
